Bug 381290 - Fill Tool disapears layers on group layer
Summary: Fill Tool disapears layers on group layer
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Filter Layers (other bugs)
Version First Reported In: 3.1.4
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-06-16 16:03 UTC by Camilo Montolio
Modified: 2017-09-30 14:57 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Camilo Montolio 2017-06-16 16:03:08 UTC
When I use the Fill Tool on a group layer, it turns invisible all what I've done on those layers (not the layers themselves). Undoing won't bring back what I've done, either partially or at all. It does, however, when I toggle Passtrough (on group layer) or turn off and then on one of the layers.
Comment 1 Nicholas LaPointe 2017-06-22 11:02:34 UTC
Thanks for your report! I am able to reproduce the issue.
Comment 2 Nicholas LaPointe 2017-06-22 12:53:19 UTC
When retesting this a moment ago, I found that you need at least two layers in the group for the bug to occur.
Comment 3 Halla Rempt 2017-09-30 14:56:31 UTC
Git commit 17a60a84674e3b12e681399bd88aabaa30d2738a by Boudewijn Rempt.
Committed on 30/09/2017 at 14:55.
Pushed by rempt into branch 'krita/3.3'.

Don't allow the fill tool to work on group layers

This fixes the issue where it would be possible to apply a
fill on the projection of a group layer, leading to really
weird results.

M  +1    -1    libs/ui/tool/kis_tool_freehand.cc
M  +22   -20   plugins/tools/basictools/kis_tool_fill.cc

https://commits.kde.org/krita/17a60a84674e3b12e681399bd88aabaa30d2738a
Comment 4 Halla Rempt 2017-09-30 14:57:02 UTC
This was already fixed in master.