Don't allow the fill tool to work on group layers

This fixes the issue where it would be possible to apply a
fill on the projection of a group layer, leading to really
weird results.

BUG:381290