libs/ui/tool/kis_tool_freehand.cc
@@ -203,7 +203,7 @@ void KisToolFreehand::beginPrimaryAction(KoPointerEvent *event)
 
     NodePaintAbility paintability = nodePaintAbility();
     if (!nodeEditable() || paintability != PAINT) {
-        if(paintability == KisToolPaint::VECTOR){
+        if (paintability == KisToolPaint::VECTOR){
             KisCanvas2 * kiscanvas = static_cast<KisCanvas2*>(canvas());
             QString message = i18n("The brush tool cannot paint on this layer.  Please select a paint layer or mask.");
             kiscanvas->viewManager()->showFloatingMessage(message, koIcon("object-locked"));
